# pytailer

./: pyproject.toml
.github/workflows/: python-package.yml
